--- a/documents/blog.html
+++ b/documents/blog.html
@@ -20,16 +20,16 @@
 			</div>
 			<nav class="nav">
 				<ul class="nav-ul d-flex justify-content-between">
-					<li class="nav__li"><a href="#" class="nav__item">услуги </a></li>
-					<li class="nav__li"><a href="#" class="nav__item">салоны</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">отзывы</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">блог</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">контакты</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">бонусы и акции</a></li>
+					<li class="nav__li"><a href="services.html" class="nav__item">услуги </a></li>
+					<li class="nav__li"><a href="salons.html" class="nav__item">салоны</a></li>
+					<li class="nav__li"><a href="testimonials.html" class="nav__item">отзывы</a></li>
+					<li class="nav__li"><a href="blog.html" class="nav__item">блог</a></li>
+					<li class="nav__li"><a href="contacts.html" class="nav__item">контакты</a></li>
+					<li class="nav__li"><a href="bonuses.html" class="nav__item">бонусы и акции</a></li>
 				</ul>
 			</nav>
 			<a href="tel:+7 499 213-13-13" class="header__tel"><i class="icon-tel"></i>+7 499 213-13-13</a>
-			<button class="standart-btn header__btn d-block d-md-none">записаться</button>
+			<button class="modal-btn standart-btn header__btn d-block d-md-none" data-target="appointment">записаться</button>
 			<a href="mailto:info@persona-you.ru" class="header__email"><i class="icon-email"></i>info@persona-you.ru</a>
 			<div class="header-socials d-flex d-md-none d-xl-flex">
 				<a href="mailto:info@persona-you.ru" class="header-socials__item header-socials__item_email justify-content-center align-items-center"><i class="icon-email"></i></a>
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="header-bottom d-flex justify-content-between align-items-center position-relative mx-auto">
-			<a href="#" class="header__logo">
+			<a href="../index.html" class="header__logo">
 				<img src="../img/logo.png" alt="logo">
 				<p class="text-center">имидж-лаборатория твоего стиля</p>
 			</a>
@@ -46,13 +46,13 @@
 				<div class="header-services__item dropdown-parent">
 					<span class="dropdown"><i class="icon-header-service-1"></i><span>парикмахерский сервис</span><i class="icon-dropdown"></i></span>
 					<ul class="dropdown-content">
-						<li class="dropdown__item"><a href="documents/categories.html">Стрижка</a></li>
-						<li class="dropdown__item"><a href="documents/payment&delivery.html">Окрашивание</a></li>
-						<li class="dropdown__item"><a href="documents/return-policy.html">Укладка</a></li>
+						<li class="dropdown__item"><a href="categories.html">Стрижка</a></li>
+						<li class="dropdown__item"><a href="payment&delivery.html">Окрашивание</a></li>
+						<li class="dropdown__item"><a href="return-policy.html">Укладка</a></li>
 						<li class="dropdown__item"><a href="#">Кератиновое выпрямление</a></li>
-						<li class="dropdown__item"><a href="documents/discounts.html">Ботокс для волос</a></li>
-						<li class="dropdown__item"><a href="documents/discounts.html">Уход</a></li>
-						<li class="dropdown__item"><a href="documents/discounts.html">Обьем и густота</a></li>
+						<li class="dropdown__item"><a href="discounts.html">Ботокс для волос</a></li>
+						<li class="dropdown__item"><a href="discounts.html">Уход</a></li>
+						<li class="dropdown__item"><a href="discounts.html">Обьем и густота</a></li>
 					</ul>
 				</div>
 				<div class="header-services__item dropdown-parent">
@@ -61,37 +61,37 @@
 						<div class="dropdown-part">
 							<h2>Лицо:</h2>
 							<ul>
-								<li class="dropdown__item"><a href="documents/categories.html">Омоложение / лифтинг</a></li>
-								<li class="dropdown__item"><a href="documents/payment&delivery.html">Ультразвуковая чистка</a></li>
-								<li class="dropdown__item"><a href="documents/return-policy.html">Эпиляция</a></li>
+								<li class="dropdown__item"><a href="categories.html">Омоложение / лифтинг</a></li>
+								<li class="dropdown__item"><a href="payment&delivery.html">Ультразвуковая чистка</a></li>
+								<li class="dropdown__item"><a href="return-policy.html">Эпиляция</a></li>
 								<li class="dropdown__item"><a href="#">Инъекции</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Регенерация кожи</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Увлажнение</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Пилинг</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Пигментация</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Купероз</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Акне</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Регенерация кожи</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Увлажнение</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Пилинг</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Пигментация</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Купероз</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Акне</a></li>
 							</ul>
 						</div>
 						<div class="dropdown-part">
 							<h2>Тело:</h2>
 							<ul>
-								<li class="dropdown__item"><a href="documents/categories.html">Похудение</a></li>
-								<li class="dropdown__item"><a href="documents/payment&delivery.html">Целлюлит</a></li>
-								<li class="dropdown__item"><a href="documents/return-policy.html">Эпиляция</a></li>
+								<li class="dropdown__item"><a href="categories.html">Похудение</a></li>
+								<li class="dropdown__item"><a href="payment&delivery.html">Целлюлит</a></li>
+								<li class="dropdown__item"><a href="return-policy.html">Эпиляция</a></li>
 								<li class="dropdown__item"><a href="#">Упругость кожи</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Лимфодренаж</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Солярий</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Лимфодренаж</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Солярий</a></li>
 							</ul>
 						</div>
 						<div class="dropdown-part">
 							<h2>Make-up:</h2>
 							<ul>
-								<li class="dropdown__item"><a href="documents/categories.html">Визаж</a></li>
-								<li class="dropdown__item"><a href="documents/payment&delivery.html">Архитектура бровей</a></li>
-								<li class="dropdown__item"><a href="documents/return-policy.html">Биотатуаж хной</a></li>
+								<li class="dropdown__item"><a href="categories.html">Визаж</a></li>
+								<li class="dropdown__item"><a href="payment&delivery.html">Архитектура бровей</a></li>
+								<li class="dropdown__item"><a href="return-policy.html">Биотатуаж хной</a></li>
 								<li class="dropdown__item"><a href="#">Наращивание ресниц</a></li>
-								<li class="dropdown__item"><a href="documents/discounts.html">Перманентный макияж</a></li>
+								<li class="dropdown__item"><a href="discounts.html">Перманентный макияж</a></li>
 							</ul>
 						</div>
 					</div>
@@ -99,17 +99,17 @@
 				<div class="header-services__item dropdown-parent">
 					<span class="dropdown"><i class="icon-header-service-3"></i><span>ногтевой сервис</span><i class="icon-dropdown"></i></span>
 					<ul class="dropdown-content">
-						<li class="dropdown__item"><a href="documents/categories.html">Маникюр</a></li>
-						<li class="dropdown__item"><a href="documents/payment&delivery.html">Педикюр</a></li>
-						<li class="dropdown__item"><a href="documents/return-policy.html">Омоложение кожи рук</a></li>
+						<li class="dropdown__item"><a href="categories.html">Маникюр</a></li>
+						<li class="dropdown__item"><a href="payment&delivery.html">Педикюр</a></li>
+						<li class="dropdown__item"><a href="return-policy.html">Омоложение кожи рук</a></li>
 						<li class="dropdown__item"><a href="#">Покрытие</a></li>
-						<li class="dropdown__item"><a href="documents/discounts.html">Восстановление/укрепление ногтей</a></li>
-						<li class="dropdown__item"><a href="documents/discounts.html">Наращивание ногтей</a></li>
+						<li class="dropdown__item"><a href="discounts.html">Восстановление/укрепление ногтей</a></li>
+						<li class="dropdown__item"><a href="discounts.html">Наращивание ногтей</a></li>
 					</ul>
 				</div>
 				<div class="header-services__item"><span><i class="icon-header-service-4"></i><span>солярий</span></span></div>
 			</div>
-			<button class="standart-btn header__btn d-none d-md-block">записаться</button>
+			<button class="modal-btn standart-btn header__btn d-none d-md-block" data-target="appointment">записаться</button>
 			<div class="header-socials d-none d-md-flex d-lg-none">
 				<a href="mailto:info@persona-you.ru" class="header-socials__item header-socials__item_email justify-content-center align-items-center"><i class="icon-email"></i></a>
 				<a href="#" class="header-socials__item header-socials__item_inst d-flex justify-content-center align-items-center"><i class="icon-inst"></i></a>
@@ -133,7 +133,7 @@
 		<section class="blog container">
 			<h1 class="blog__title title-l">Блог</h1>
 			<div class="blog-container d-flex flex-wrap">
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -146,7 +146,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -159,7 +159,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -172,7 +172,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -185,7 +185,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -198,7 +198,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="blog-item">
+				<a href="blog-open.html" class="blog-item">
 					<div class="blog__img" style="background-image: url(../img/blog-1.jpg);"></div>
 					<div class="blog-content">
 						<div class="blog__text">
@@ -220,8 +220,33 @@
 	</main>
 
 	<footer class="footer d-flex">
+		<div class="modal" data-target="appointment">
+      <div class="modal-container">
+        <div class="modal-close"></div>
+					<h1 class="modal__title title">Записаться к мастеру</h1>
+					<input type="text" placeholder="Имя">
+					<input type="tel" placeholder="Телефон*">
+					<input type="email" placeholder="Почта">
+					<div class="modal-dropdown">
+						<span class="modal-dropdown__current d-flex justify-content-between align-items-center"><span>Выберите услугу</span><i class="icon-dropdown"></i></span>
+						<ul class="modal-dropdown-list">
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки и бровки</span><i class="icon-check"></i></li>
+						</ul>
+					</div>
+					<textarea name="message" cols="30" rows="10" placeholder="Сообщение"></textarea>
+					<button class="standart-btn modal__btn mx-auto">Записаться</button>
+					<p class="modal__politics">Нажимая “Записаться” вы соглашаетесь <br> с <a href="policy.html" target="_blank">политикой конфиденциальности</a></p>
+      </div>
+    </div>
+    
 		<div class="container d-flex align-items-center justify-content-md-between justify-content-center flex-wrap">
-			<a href="#"><img src="../img/footer-logo.png" alt="logo" class="footer__logo"></a>
+			<a href="../index.html"><img src="../img/footer-logo.png" alt="logo" class="footer__logo"></a>
 			<address class="address d-flex justify-content-between">
 				<div class="address-half">
 					<a href="tel:+7 499 213-13-13" class="address__item"><i class="icon-tel"></i><span>+7 499 213-13-13</span></a>
@@ -234,16 +259,16 @@
 			</address>
 			<div class="footer-nav d-flex justify-content-between">
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">услуги</a>
-					<a href="#" class="footer-nav__item">салоны</a>
+					<a href="services.html" class="footer-nav__item">услуги</a>
+					<a href="salons.html" class="footer-nav__item">салоны</a>
 				</div>
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">отзывы</a>
-					<a href="#" class="footer-nav__item">блог</a>
+					<a href="testimonials.html" class="footer-nav__item">отзывы</a>
+					<a href="blog.html" class="footer-nav__item">блог</a>
 				</div>
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">контакты</a>
-					<a href="#" class="footer-nav__item">бонусы и акции</a>
+					<a href="contacts.html" class="footer-nav__item">контакты</a>
+					<a href="bonuses.html" class="footer-nav__item">бонусы и акции</a>
 				</div>
 			</div>
 		</div>
