--- a/documents/bonuses.html
+++ b/documents/bonuses.html
@@ -127,88 +127,44 @@
 		<div class="container">
 			<ul class="breadcrumbs breadcrumbs_high">
 	      <li class="breadcrumbs__item"><a href="#">Главная</a></li>
-	      <li class="breadcrumbs__item"><a href="#">Отзывы</a></li>
+	      <li class="breadcrumbs__item"><a href="#">Бонусы и акции</a></li>
 	    </ul>
 		</div>
-		<section class="testimonials-page" style="background-image: url(../img/sertificate-bg.jpg);">
-			<div class="container position-relative d-flex h-100 align-items-center">
-				<div class="testimonials-page__img" style="background-image: url(../img/testimonials-page-img.jpg);"></div>
-				<div class="testimonials-page-text">
-					<h1 class="testimonials-page__title title-l">Отзывы</h1>
-					<p>Ваше мнение очень важно для нас! Оставте свой отзыв, чтобы помочь нам стать лучше!</p>
-					<button class="modal-btn standart-btn standart-btn_big testimonials-page__btn" data-target="testimonial">оставить отзыв</button>
+		<section class="bonuses container">
+			<h1 class="title-l bonuses__title">Бонусы и акции</h1>
+			<div class="bonuses-tabs d-flex justify-content-between">
+				<span class="bonuses-tabs__item current" data-target="bonus">Бонусы</span>
+				<span class="bonuses-tabs__item" data-target="promotion">Акции</span>
+			</div>
+			<div class="bonuses-container">
+				<div class="bonuses-content current" data-target="bonus">
+					<div class="bonuses-item">
+						<img src="../img/bonus-1.png" alt="" aria-hidden="true" class="bonuses__img">
+						<h2 class="bonuses__subtitle">CashBack до 10%!</h2>
+						<p>В наших салонаш действует система накопления бонусов на фирменной карте. Каждый раз, пользуясь услугами салона вы получаете возврат до 10% стоимости услуг на вашу карту в виде бонусных баллов. <br><br>
+						Оформить накопительную карту ПЕРСОНА lab Вы можете у администратора в имидж-лаборатории. <br><br>
+						У вас будет личный счет, на который с каждой оплаченной Вами услуги будет начисляться бонус от стоимости услуг (1 бонус = 1 рублю). <br><br>
+						Вы можете оплатить бонусами услуги в следующее посещение или накопить их, чтобы потом списать большую сумму бонусов. Посещайте нас чаще и получайте больше бонусов!
+						</p>
+					</div>
+					<div class="bonuses-item">
+						<img src="../img/bonus-2.jpg" alt="" aria-hidden="true" class="bonuses__img">
+						<h2 class="bonuses__subtitle">Внимание - бонус!</h2>
+						<p>В целом, конечно, реализация намеченных плановых заданий не даёт нам иного выбора, кроме определения новых предложений. <br><br>
+						Значимость этих проблем настолько очевидна, что экономическая повестка сегодняшнего дня является качественно новой ступенью как самодостаточных, так и внешне зависимых концептуальных решений.<br><br>
+						Значимость этих проблем настолько очевидна, что укрепление и развитие внутренней структуры прекрасно подходит для реализации своевременного выполнения сверхзадачи. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: синтетическое тестирование однозначно определяет каждого участника как способного принимать собственные решения касаемо новых принципов формирования материально-технической и кадровой базы.
+						</p>
+					</div>
+				</div>
+				<div class="bonuses-content" data-target="promotion">
+					<div class="promotion-item" style="background-image: url(../img/promotion-1.jpg);"></div>
+					<div class="promotion-item" style="background-image: url(../img/promotion-2.jpg);"></div>
+					<div class="promotion-item" style="background-image: url(../img/promotion-3.jpg);"></div>
+					<button class="bonuses__more standart-btn standart-btn_big standart-btn_white mx-auto">больше акций</button>
 				</div>
 			</div>
 		</section>
-		<section class="testimonials-container">
-			<div class="container">
-				<blockquote class="testimonials-item">
-							<i class="testimonials__quotes icon-quotes"></i>
-							<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-							<div class="testimonials-text">
-								<cite class="testimonials__author">Анастасия Фролова</cite>
-								<span class="testimonials__service">Услуга: <span class="font-weight-bold">Пилинг</span></span>
-								<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов!</p>
-								<div class="testimonials__footer d-flex justify-content-end">
-									<date class="testimonials__date">27 мая 2019</date>
-								</div>
-							</div>
-				</blockquote>
-				<blockquote class="testimonials-item">
-					<i class="testimonials__quotes icon-quotes"></i>
-					<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-					<div class="testimonials-text">
-						<cite class="testimonials__author">Анастасия Фролова</cite>
-						<span class="testimonials__service">Услуга: <span class="font-weight-bold">Окрашивание</span></span>
-						<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы.</p>
-						<div class="testimonials__footer d-flex justify-content-end">
-							<date class="testimonials__date">27 мая 2019</date>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote class="testimonials-item">
-					<i class="testimonials__quotes icon-quotes"></i>
-					<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-					<div class="testimonials-text">
-						<cite class="testimonials__author">Анастасия Фролова</cite>
-						<span class="testimonials__service">Услуга: <span class="font-weight-bold">Окрашивание</span></span>
-						<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов! <br><br>
-						Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов! Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов!</p>
-						<div class="testimonials__footer d-flex justify-content-end">
-							<date class="testimonials__date">27 мая 2019</date>
-						</div>
-					</div>
-				</blockquote>
-			</div>
-			<button class="standart-btn standart-btn_big standart-btn_white testimonials-container__btn mx-auto">больше отзывов</button>
-		</section>
-		<div class="modal" data-target="testimonial">
-      <div class="modal-container">
-        <div class="modal-close"></div>
-					<h1 class="modal__title title">Оставить отзыв</h1>
-					<input type="text" placeholder="Имя">
-					<input type="tel" placeholder="Телефон*">
-					<input type="email" placeholder="Почта">
-					<textarea name="message" cols="30" rows="10" placeholder="Ваш отзыв"></textarea>
-					<div class="input-file d-flex align-items-center">
-						<label for="upload-file">
-							<div class="input-file__btn">
-								<div class="layer"></div>
-							</div>
-							<p class="input-file__text">Прикрепить фото</p></label>
-						<i class="input-file__info icon-info">
-							<div class="info">
-							<span>Размер: макс. 3 Мб</span>
-							<span>Формат: .jpg, .png</span>
-						</div>
-						</i>
-						
-						<input type="file" accept=".png, .jpg, .jpeg" id="upload-file" class="input-file__hidden">
-					</div>
-					<button class="standart-btn modal__btn mx-auto">Оставить отзыв</button>
-					<p class="modal__politics">Нажимая “Записаться” вы соглашаетесь <br> с <a href="policy.html" target="_blank">политикой конфиденциальности</a></p>
-      </div>
-    </div>
+
 	</main>
 
 	<footer class="footer d-flex">
@@ -268,5 +224,17 @@
 	<script src="../script/jquery.js"></script>
 	<script src="../script/slick.min.js"></script>
 	<script src="../script/script.js"></script>
+	<script>
+		APP.bonusesTab = $('.bonuses-tabs__item');
+
+		APP.bonusesTab.on('click', function() {
+			let	target = $(this).data('target');
+
+			$('.bonuses-tabs__item.current').removeClass('current');
+			$(this).addClass('current');
+			$('.bonuses-content.current').removeClass('current');
+			$('.bonuses-content[data-target="' + target + '"]').addClass('current');
+		})
+	</script>
 </body>
 </html>
