--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 			</div>
 			<nav class="nav">
 				<ul class="nav-ul d-flex justify-content-between">
-					<li class="nav__li"><a href="#" class="nav__item">услуги </a></li>
-					<li class="nav__li"><a href="#" class="nav__item">салоны</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">отзывы</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">блог</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">контакты</a></li>
-					<li class="nav__li"><a href="#" class="nav__item">бонусы и акции</a></li>
+					<li class="nav__li"><a href="documents/services.html" class="nav__item">услуги </a></li>
+					<li class="nav__li"><a href="documents/salons.html" class="nav__item">салоны</a></li>
+					<li class="nav__li"><a href="documents/testimonials.html" class="nav__item">отзывы</a></li>
+					<li class="nav__li"><a href="documents/blog.html" class="nav__item">блог</a></li>
+					<li class="nav__li"><a href="documents/contacts.html" class="nav__item">контакты</a></li>
+					<li class="nav__li"><a href="documents/bonuses.html" class="nav__item">бонусы и акции</a></li>
 				</ul>
 			</nav>
 			<a href="tel:+7 499 213-13-13" class="header__tel"><i class="icon-tel"></i>+7 499 213-13-13</a>
-			<button class="standart-btn header__btn d-block d-md-none">записаться</button>
+			<button class="modal-btn standart-btn header__btn d-block d-md-none" data-target="appointment">записаться</button>
 			<a href="mailto:info@persona-you.ru" class="header__email"><i class="icon-email"></i>info@persona-you.ru</a>
 			<div class="header-socials d-flex d-md-none d-xl-flex">
 				<a href="mailto:info@persona-you.ru" class="header-socials__item header-socials__item_email justify-content-center align-items-center"><i class="icon-email"></i></a>
@@ -109,7 +109,7 @@
 				</div>
 				<div class="header-services__item"><span><i class="icon-header-service-4"></i><span>солярий</span></span></div>
 			</div>
-			<button class="standart-btn header__btn d-none d-md-block">записаться</button>
+			<button class="modal-btn standart-btn header__btn d-none d-md-block" data-target="appointment">записаться</button>
 			<div class="header-socials d-none d-md-flex d-lg-none">
 				<a href="mailto:info@persona-you.ru" class="header-socials__item header-socials__item_email justify-content-center align-items-center"><i class="icon-email"></i></a>
 				<a href="#" class="header-socials__item header-socials__item_inst d-flex justify-content-center align-items-center"><i class="icon-inst"></i></a>
@@ -187,55 +187,55 @@
 				<h1 class="popular__title title-l">Популярные услуги</h1>
 				<div class="row popular-container">
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-1.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>стрижка</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-2.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>окрашивание</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-3.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>укладка</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-4.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>ботокс для волос</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-5.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>маникюр</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-6.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>лифтинг</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-7.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>эпиляция</span></span>
-						</div>
+						</a>
 					</div>
 					<div class="popular-item-container col-6 col-md-4 col-lg-3">
-						<div class="popular-item">
+						<a href="documents/service-open.html" class="popular-item">
 							<div class="popular-item__img" style="background-image: url(img/popular-8.jpg);"></div>
 							<span class="popular-item__title d-flex justify-content-center align-items-center"><span>архитектура бровей</span></span>
-						</div>
+						</a>
 					</div>
 				</div>
-				<button class="popular__btn standart-btn standart-btn_big standart-btn_white mx-auto">все услуги</button>
+				<a href="documents/services.html" class="popular__btn standart-btn standart-btn_big standart-btn_white mx-auto">все услуги</a>
 			</div>
 		</section>
 		<section class="promo" style="background-image: url(img/sertificate-bg.jpg);">
@@ -247,7 +247,7 @@
 					<div class="col-lg-7 col-xl-6 d-flex flex-column justify-content-center">
 						<h1 class="promo__title title-m">Подарочный сертификат</h1>
 						<p>имидж-лаборатории “ПЕРСОНА” - это  модный, приятный, а самое главное всегда актуальный подарок! Закажите сейчас и получите скидку в 10% на любую нашу услугу!</p>
-						<button class="promo__btn standart-btn standart-btn_big">заказать сертификат</button>
+						<button class="modal-btn promo__btn standart-btn standart-btn_big" data-target="sertificate">заказать сертификат</button>
 					</div>
 				</div>
 			</div>
@@ -344,9 +344,48 @@
 				<iframe data-city="Egorievsk" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2266.9191651721176!2d39.04961071591599!3d55.376866980454494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414a5b84dcd3d025%3A0xe7881802cab25a61!2z0J_QtdGA0YHQvtC90LAgTGFi!5e0!3m2!1sru!2sua!4v1567520446106!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 			</div>
 		</section>
+		<div class="modal" data-target="sertificate">
+      <div class="modal-container">
+        <div class="modal-close"></div>
+					<h1 class="modal__title title">Заказать сертификат</h1>
+					<input type="text" placeholder="Имя">
+					<input type="tel" placeholder="Телефон*">
+					<input type="email" placeholder="Почта">
+					<input type="text" placeholder="На чье имя сертификат">
+					<input type="number" placeholder="Сумма сертификата">
+					<textarea name="message" cols="30" rows="10" placeholder="Комментарий"></textarea>
+					<button class="standart-btn modal__btn mx-auto">Заказать</button>
+					<p class="modal__politics">Нажимая “Записаться” вы соглашаетесь <br> с <a href="documents/policy.html" target="_blank">политикой конфиденциальности</a></p>
+      </div>
+    </div>
 	</main>
 
 	<footer class="footer d-flex">
+		<div class="modal" data-target="appointment">
+      <div class="modal-container">
+        <div class="modal-close"></div>
+					<h1 class="modal__title title">Записаться к мастеру</h1>
+					<input type="text" placeholder="Имя">
+					<input type="tel" placeholder="Телефон*">
+					<input type="email" placeholder="Почта">
+					<div class="modal-dropdown">
+						<span class="modal-dropdown__current d-flex justify-content-between align-items-center"><span>Выберите услугу</span><i class="icon-dropdown"></i></span>
+						<ul class="modal-dropdown-list">
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Бровки</span><i class="icon-check"></i></li>
+							<li class="modal-dropdown__item d-flex justify-content-between align-items-center"><span>Ноготочки и бровки</span><i class="icon-check"></i></li>
+						</ul>
+					</div>
+					<textarea name="message" cols="30" rows="10" placeholder="Сообщение"></textarea>
+					<button class="standart-btn modal__btn mx-auto">Записаться</button>
+					<p class="modal__politics">Нажимая “Записаться” вы соглашаетесь <br> с <a href="documents/policy.html" target="_blank">политикой конфиденциальности</a></p>
+      </div>
+    </div>
+    
 		<div class="container d-flex align-items-center justify-content-md-between justify-content-center flex-wrap">
 			<a href="#"><img src="img/footer-logo.png" alt="logo" class="footer__logo"></a>
 			<address class="address d-flex justify-content-between">
@@ -361,16 +400,16 @@
 			</address>
 			<div class="footer-nav d-flex justify-content-between">
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">услуги</a>
-					<a href="#" class="footer-nav__item">салоны</a>
+					<a href="documents/services.html" class="footer-nav__item">услуги</a>
+					<a href="documents/salons.html" class="footer-nav__item">салоны</a>
 				</div>
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">отзывы</a>
-					<a href="#" class="footer-nav__item">блог</a>
+					<a href="documents/testimonials.html" class="footer-nav__item">отзывы</a>
+					<a href="documents/blog.html" class="footer-nav__item">блог</a>
 				</div>
 				<div class="footer-nav-part">
-					<a href="#" class="footer-nav__item">контакты</a>
-					<a href="#" class="footer-nav__item">бонусы и акции</a>
+					<a href="documents/contacts.html" class="footer-nav__item">контакты</a>
+					<a href="documents/bonuses.html" class="footer-nav__item">бонусы и акции</a>
 				</div>
 			</div>
 		</div>
