--- a/documents/blog-open.html
+++ b/documents/blog-open.html
@@ -127,88 +127,27 @@
 		<div class="container">
 			<ul class="breadcrumbs breadcrumbs_high">
 	      <li class="breadcrumbs__item"><a href="#">Главная</a></li>
-	      <li class="breadcrumbs__item"><a href="#">Отзывы</a></li>
+	      <li class="breadcrumbs__item"><a href="#">Блог</a></li>
+	      <li class="breadcrumbs__item"><a href="#">В нашем салоне появилась новая услуга - шугаринг!</a></li>
 	    </ul>
 		</div>
-		<section class="testimonials-page" style="background-image: url(../img/sertificate-bg.jpg);">
-			<div class="container position-relative d-flex h-100 align-items-center">
-				<div class="testimonials-page__img" style="background-image: url(../img/testimonials-page-img.jpg);"></div>
-				<div class="testimonials-page-text">
-					<h1 class="testimonials-page__title title-l">Отзывы</h1>
-					<p>Ваше мнение очень важно для нас! Оставте свой отзыв, чтобы помочь нам стать лучше!</p>
-					<button class="modal-btn standart-btn standart-btn_big testimonials-page__btn" data-target="testimonial">оставить отзыв</button>
-				</div>
+		<section class="blog-open container">
+			<div class="blog-open-container">
+				<img src="../img/blog-1.jpg" alt="" aria-hidden="true" class="blog-open__img">
+				<h1 class="blog-open__title">В нашем салоне появилась новая услуга - шугаринг!</h1>
+				<date class="blog-open__date">27 мая 2019</date>
+				<p>Противоположная точка зрения подразумевает, что сторонники тоталитаризма в науке могут быть объединены в целые кластеры себе подобных. Принимая во внимание показатели успешности, сложившаяся структура организации является качественно новой ступенью стандартных подходов.</p>
+				<p>Господа, синтетическое тестирование напрямую зависит от переосмысления внешнеэкономических политик. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений.</p>
+				<p>Вот вам яркий пример современных тенденций - постоянное информационно-пропагандистское обеспечение нашей деятельности выявляет срочную потребность поставленных обществом задач. Каждый из нас понимает очевидную вещь: убежденность некоторых оппонентов деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений. </p>
+				<img src="../img/blog-open-img.jpg" alt="" aria-hidden="true" class="blog-open__img">
+				<p>Господа, синтетическое тестирование напрямую зависит от переосмысления внешнеэкономических политик. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений.</p>
+				<p>Вот вам яркий пример современных тенденций - постоянное информационно-пропагандистское обеспечение нашей деятельности выявляет срочную потребность поставленных обществом задач. Каждый из нас понимает очевидную вещь: убежденность некоторых оппонентов деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений. </p>
+			</div>
+			<div class="blog-open-nav d-flex justify-content-between">
+				<a href="#" class="blog-open__prev d-flex align-items-center"><button><i class="icon-slider-arrow"></i></button><p>Какой-то заголовок предыдущей новости</p></a>
+				<a href="#" class="blog-open__next d-flex align-items-center"><p>Очень длиннный заголовок следующей новости в списке</p><button><i class="icon-slider-arrow"></i></button></a>
 			</div>
 		</section>
-		<section class="testimonials-container">
-			<div class="container">
-				<blockquote class="testimonials-item">
-							<i class="testimonials__quotes icon-quotes"></i>
-							<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-							<div class="testimonials-text">
-								<cite class="testimonials__author">Анастасия Фролова</cite>
-								<span class="testimonials__service">Услуга: <span class="font-weight-bold">Пилинг</span></span>
-								<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов!</p>
-								<div class="testimonials__footer d-flex justify-content-end">
-									<date class="testimonials__date">27 мая 2019</date>
-								</div>
-							</div>
-				</blockquote>
-				<blockquote class="testimonials-item">
-					<i class="testimonials__quotes icon-quotes"></i>
-					<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-					<div class="testimonials-text">
-						<cite class="testimonials__author">Анастасия Фролова</cite>
-						<span class="testimonials__service">Услуга: <span class="font-weight-bold">Окрашивание</span></span>
-						<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы.</p>
-						<div class="testimonials__footer d-flex justify-content-end">
-							<date class="testimonials__date">27 мая 2019</date>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote class="testimonials-item">
-					<i class="testimonials__quotes icon-quotes"></i>
-					<div class="testimonials__img" style="background-image: url(../img/testimonials-img.jpg);" role="img" aria-label="photo"></div>
-					<div class="testimonials-text">
-						<cite class="testimonials__author">Анастасия Фролова</cite>
-						<span class="testimonials__service">Услуга: <span class="font-weight-bold">Окрашивание</span></span>
-						<p>Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов! <br><br>
-						Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов! Мы вынуждены отталкиваться от того, что понимание сути ресурсосберегающих технологий требует определения и уточнения новых принципов формирования материально-технической и кадровой базы. В рамках спецификации современных стандартов, сделанные на базе интернет-аналитики выводы указаны как претенденты на роль ключевых факторов!</p>
-						<div class="testimonials__footer d-flex justify-content-end">
-							<date class="testimonials__date">27 мая 2019</date>
-						</div>
-					</div>
-				</blockquote>
-			</div>
-			<button class="standart-btn standart-btn_big standart-btn_white testimonials-container__btn mx-auto">больше отзывов</button>
-		</section>
-		<div class="modal" data-target="testimonial">
-      <div class="modal-container">
-        <div class="modal-close"></div>
-					<h1 class="modal__title title">Оставить отзыв</h1>
-					<input type="text" placeholder="Имя">
-					<input type="tel" placeholder="Телефон*">
-					<input type="email" placeholder="Почта">
-					<textarea name="message" cols="30" rows="10" placeholder="Ваш отзыв"></textarea>
-					<div class="input-file d-flex align-items-center">
-						<label for="upload-file">
-							<div class="input-file__btn">
-								<div class="layer"></div>
-							</div>
-							<p class="input-file__text">Прикрепить фото</p></label>
-						<i class="input-file__info icon-info">
-							<div class="info">
-							<span>Размер: макс. 3 Мб</span>
-							<span>Формат: .jpg, .png</span>
-						</div>
-						</i>
-						
-						<input type="file" accept=".png, .jpg, .jpeg" id="upload-file" class="input-file__hidden">
-					</div>
-					<button class="standart-btn modal__btn mx-auto">Оставить отзыв</button>
-					<p class="modal__politics">Нажимая “Записаться” вы соглашаетесь <br> с <a href="policy.html" target="_blank">политикой конфиденциальности</a></p>
-      </div>
-    </div>
 	</main>
 
 	<footer class="footer d-flex">
